# p3-insta485-clientside

./: cookies.txt  cypress.config.js  deployed_bundle.js  deployed_index.html  eslint.config.js  package-lock.json  package.json  pyproject.toml  requirements.txt  webpack.config.js
insta485/: __init__.py  config.py  config.py.save
insta485.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
insta485/js/: feed.jsx  like.jsx  main.jsx  post.jsx
insta485/static/css/: style.css
insta485/static/js/: bundle.js  bundle.js.map
insta485/templates/: create.html  delete.html  edit.html  explore.html  follower.html  followers.html  following.html  index.html  login.html  password.html  post.html  user.html
insta485/views/: __init__.py  api.py  followers.py  following.py  index.py  uploads.py  users.py
sql/: data.sql  schema.sql
tests/: test_rest_api_likes_and_comments.py  test_rest_api_posts.py  test_rest_api_simple.py  test_style.py
tests/cypress/e2e/: test_index_public.cy.js  test_scroll_public.cy.js  test_slow_server_index_public.cy.js
tests/cypress/fixtures/: posts_page_0_recent.json
tests/cypress/fixtures/posts/: 33.json
tests/cypress/support/: e2e.js
var/: insta485.sqlite3
